--- a/index.html
+++ b/index.html
@@ -43,32 +43,34 @@
 - Where it can be used
 </code></pre>
 
-<h3>
-<a name="what-is-arduino" class="anchor" href="#what-is-arduino"><span class="octicon octicon-link"></span></a>What is Arduino?</h3>
+<h3><a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Node.js, Express, EJS & MongoDB</h3>
 
-<p>It's an open-source physical computing platform based on a simple microcontroller board, and a development environment for writing software for the board. Arduino can be used to develop interactive objects, taking inputs from a variety of switches or sensors, and controlling a variety of lights, motors, and other physical outputs.</p>
-      </section>
-    </div>
+<p>In this lesson, let see how to do the CRUD operations on MongoDB using Node.js, Express & EJS.  I am assuming you are familiar with Node.js & MongoDB. 
+Express is a web application framework for Node.js, which provides the easy way to build web applications with multi pages.  Express comes with 'Jade', a templating engine.
+EJS is also a popular templating engine for Node.js.  
+</p>
+<br>
+
+<h3><a name="L1" class="anchor" href="#L1"><span class="octicon octicon-link"></span></a>How to use Express & EJS/h3>
+
+<p>
+are familiar with Node.js & MongoDB. 
+Express is a web application framework for Node.js, which provides the easy way to build web applications with multi pages.  Express comes with 'Jade', a templating engine.
+EJS is also a popular templating engine for Node.js.  
+</p>
+<br>
+
+
+</section>
+</div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Tech-noon maintained by <a href="https://github.com/vrkrajesh">vrkrajesh</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">Technoon maintained by Rajeshkumar Venkatesan</a></p>
       </footer>
     </div>
 
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("tech-noon");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
 
-
-  </body>
+</body>
 </html>
