--- a/index.html
+++ b/index.html
@@ -5,92 +5,113 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Tech-noon : Technical Noons" />
-
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
     <title>Tech-noon</title>
   </head>
 
   <body>
-
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/vrkrajesh/tech-noon">View on GitHub</a>
 
           <h1 id="project_title">Tech-noon</h1>
-          <h2 id="project_tagline">Technical Noons</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/vrkrajesh/tech-noon/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/vrkrajesh/tech-noon/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+          <h2 id="project_tagline">Technical Lessons</h2>
+		  
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-tech-noons" class="anchor" href="#welcome-to-tech-noons"><span class="octicon octicon-link"></span></a>Welcome to Tech-noons</h3>
+        <h3><a name="welcome-to-tech-noons" class="anchor" href="#welcome-to-tech-noons"><span class="octicon octicon-link"></span></a>Welcome to Tech-noons</h3>
 
-<p>Hi Friends,</p>
+		<p>Lets go Technical ! </p>
 
-<p>Quite often, we tend to miss out few new information technologies coming into the market.  Like to take the opportunity to introduce few through this forum.  I will be primarily covering the below topics for each new technology</p>
+		<h3><a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Lession -1 : Node.js, Express, EJS & MongoDB</h3>
 
-<pre><code>- Explain the technology
-- Examples
-- Where it can be used
-</code></pre>
+		<p>In this lesson, let see how to do the CRUD operations on MongoDB using Node.js, Express & EJS.  I am assuming you are familiar with Node.js & MongoDB. 
+		Express is a web application framework for Node.js, which provides the easy way to build web applications with multi pages.  Express comes with 'Jade', a templating engine.
+		EJS is also a popular templating engine for Node.js.  
+		</p>
+		
+		<h3><a name="L1" class="anchor" href="#L1"><span class="octicon octicon-link"></span></a>How to use Express & EJS</h3>
+		<p> Install the 'express' & 'ejs' to the node_modules using the below command.</p>
+		
+		<pre><code>npm install express
+		npm install ejs
+		</code></pre>
 
-<h3><a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Node.js, Express, EJS & MongoDB</h3>
+		<p>Let's how to use the express for handling the http requests.  use the require method to import the express library to the node script.  From the below code the express object 'app' 
+		is passed as an argument to the 'createServer' method, after this all the incoming http get calls will be handled by the express framework.  Save the below script as 'mongocrud.js' and 
+		run the script as 'node mongocrud.js'.  Access the localhost:3000 in the browser window, Bingo !  Welcome to Technoons ! 
+		</p>
 
-<p>In this lesson, let see how to do the CRUD operations on MongoDB using Node.js, Express & EJS.  I am assuming you are familiar with Node.js & MongoDB. 
-Express is a web application framework for Node.js, which provides the easy way to build web applications with multi pages.  Express comes with 'Jade', a templating engine.
-EJS is also a popular templating engine for Node.js.  
-</p>
-<br>
+		<pre><code>
+		var express = require('express'),
+			http = require('http');
+			
+		var app = express();
 
-<h3><a name="L1" class="anchor" href="#L1"><span class="octicon octicon-link"></span></a>How to use Express & EJS</h3>
-<p> Install the 'express' & 'ejs' to the node_modules using the below command.</p>
-<br>
+		app.get('/', function(req, res) {
+			res.send('Welcome to Technoons!');
+		});
 
-<pre><code>npm install express
-npm install ejs
-</code></pre>
+		http.createServer(app).listen(3000, function() {
+			console.log("Server is listening on port 3000"); 
+		});
 
-<p>Let's how to use the express for handling the http requests.  use the require method to import the express library to the node script.  From the below code the express object 'app' 
-is passed as an argument to the 'createServer' method, after this all the incoming http get calls will be handled by the express framework.  Save the below script as 'mongocrud.js' and 
-run the script as 'node mongocrud.js'.  Access the localhost:3000 in the browser window, welcome to Technoons ! 
-</p>
+		</code></pre>
+		
+		<p>Configure the express by setting the essential parameters. Take a note that 'ejs' is mentioned as the view engine</p>
+		<pre><code>
+			app.set('views', __dirname + '/views');
+			app.set('view engine', 'ejs');
+			app.use(express.bodyParser());
+			app.use(express.methodOverride());
+			app.use(app.router);
+			app.use(express.static(path.join(__dirname, 'public')));
+		</code></pre>
+		
+		<p>Now, let's see how to display html elements using EJS. In the mongocrud.js add the below code fragment.  So when the request comes the contents in the index.js 
+		will be rendered in the browser.  Post this create a file index.ejs and include the below html fragments. </p>
+		
+		<pre><code>
+		app.get('/', function(req,res) {
+			res.render('index.ejs');
+		});
+		</code></pre>
+		
+		<pre><code>
+			<!DOCTYPE html>
+			<html>
+			<head>
+			<title>Mongo DB CRUD Operations </title>
+			</head>
+			<body>
+			<h2>CRUD operations using Node & Mongo DB </h2>
 
-<pre><code>
-var express = require('express'),
-	http = require('http');
+			<a href="/add">Add a Product</ahref> <br>
+			<a href="/view/:id">View a Product</ahref> <br> 
+			<a href="/viewall">View All Products</ahref> <br>
+			</body>
+			</html>
+		</code></pre>
+		
+	<p>Run the mongocrud.js and access the 'http://localhost:3000/', you will see the below page.  With this, we have learned how to use the templating engine to 
+	control the page display</p>		
 	
-var app = express();
+	<image src="https://f.cloud.github.com/assets/6375258/1893640/78d50cac-7aa8-11e3-8622-4469301353ab.PNG"/>
+	
+	</section>
+	</div>
 
-app.get('/', function(req, res) {
-	res.send('Welcome to Technoons!');
-});
-
-http.createServer(app).listen(3000, function() {
-	console.log("Server is listening on port 3000"); 
-});
-
-</code></pre>
-
-
-</section>
-</div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Technoon maintained by Rajeshkumar Venkatesan</a></p>
-      </footer>
-    </div>
-
+	<!-- FOOTER  -->
+	<div id="footer_wrap" class="outer">
+	<footer class="inner">
+		<p class="copyright">Technoon maintained by Rajeshkumar Venkatesan</a></p>
+	</footer>
+	</div>
 
 </body>
 </html>
