--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="">Maintained by Rajeshkumar Venkatesan</a>
           <h1 id="project_title">Tech-noon</h1>
           <h2 id="project_tagline">Technical Lessons</h2>
+		  <p class="copyright">Technoon maintained by Rajeshkumar Venkatesan</a></p>
         </header>
     </div>
 
