--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <a id="forkme_banner" href="https://github.com/vrkrajesh/tech-noon">View on GitHub</a>
           <h1 id="project_title">Tech-noon</h1>
           <h2 id="project_tagline">Technical Lessons</h2>
-		  <p class="copyright">Technoon maintained by Rajeshkumar Venkatesan</a></p>
+		  <h3><i>Technoon maintained by Rajeshkumar Venkatesan</i></h3>
+  
         </header>
     </div>
 
@@ -189,7 +191,7 @@ function renderResult(res, prds, msg) {
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
 <footer class="inner">
-	<p class="copyright">Technoon maintained by Rajeshkumar Venkatesan</a></p>
+	<p class="copyright">Technoon maintained by Rajeshkumar Venkatesan</p>
 </footer>
 </div>
 
