--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/vrkrajesh/tech-noon">View on GitHub</a>
           <h1 id="project_title">Tech-noon</h1>
           <h2 id="project_tagline">Technical Lessons</h2>
-		  <h3><i>Technoon maintained by Rajeshkumar Venkatesan</i></h3>
-  
-        </header>
+		<footer class="inner">
+			<p class="copyright">Technoon maintained by Rajeshkumar Venkatesan</p>
+		</footer></header>
     </div>
 
 <!-- MAIN CONTENT -->
