--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <h1 id="project_title">Tech-noon</h1>
-          <h2 id="project_tagline">Technical Lessons</h2>
+          <!-- <h2 id="project_tagline">Technical Lessons</h2> -->
 		<footer class="inner">
-			<p class="copyright">Technoon maintained by Rajeshkumar Venkatesan</p>
+			<p class="copyright">by Rajeshkumar Venkatesan</p>
 		</footer></header>
     </div>
 
@@ -25,7 +25,7 @@
 <section id="main_content" class="inner">
 <h3><a name="welcome-to-tech-noons" class="anchor" href="#welcome-to-tech-noons"><span class="octicon octicon-link"></span></a>Welcome to Tech-noons</h3>
 
-<p>Lets go Technical ! </p>
+<p>Technical Lessions from Technoon. Lets go Technical ! </p>
 
 <h3><a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Lession -1 : Node.js, Express, EJS & MongoDB</h3>
 
