--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <header class="inner">
           <h1 id="project_title">Tech-noon</h1>
           <!-- <h2 id="project_tagline">Technical Lessons</h2> -->
+		</header>
 		<footer class="inner">
 			<p class="copyright">by Rajeshkumar Venkatesan</p>
-		</footer></header>
+		</footer>
     </div>
 
 <!-- MAIN CONTENT -->
@@ -25,9 +26,9 @@
 <section id="main_content" class="inner">
 <h3><a name="welcome-to-tech-noons" class="anchor" href="#welcome-to-tech-noons"><span class="octicon octicon-link"></span></a>Welcome to Tech-noons</h3>
 
-<p>Technical Lessions from Technoon. Lets go Technical ! </p>
+<p>Technical Lessons from Technoon. Lets go Technical ! </p>
 
-<h3><a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Lession -1 : Node.js, Express, EJS & MongoDB</h3>
+<h3><a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Lesson -1 : Node.js, Express, EJS & MongoDB</h3>
 
 <p>In this lesson, let see how to do the CRUD operations on MongoDB using Node.js, Express & EJS.  I am assuming you are familiar with Node.js & MongoDB. 
 Express is a web application framework for Node.js, which provides the easy way to build web applications with multi pages.  Express comes with 'Jade', a templating engine.
