--- a/index.html
+++ b/index.html
@@ -1,4 +1,53 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Tech-noon : Technical Noons" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <title>TechNoon Lessons</title>
+  </head>
 
+  <body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <h1 id="project_title">Tech-noon</h1>
+          <!-- <h2 id="project_tagline">Technical Lessons</h2> -->
+		</header>
+		<footer class="inner">
+			<p class="copyright">by Rajeshkumar Venkatesan</p>
+		</footer>
+    </div>
+
+<!-- MAIN CONTENT -->
+<div id="main_content_wrap" class="outer">
+<section id="main_content" class="inner">
+<h3><a name="welcome-to-tech-noons" class="anchor" href="#welcome-to-tech-noons"><span class="octicon octicon-link"></span></a>Welcome to Tech-noons</h3>
+
+<p>Technical Lessons from Technoon. Lets go Technical !</p>
+<h3><a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Lesson -1 : Node.js, Express, EJS & MongoDB</h3>
+<p>In this lesson, let see how to do the CRUD operations on MongoDB using Node.js, Express & EJS.  I am assuming you are familiar with Node.js & MongoDB. 
+Express is a web application framework for Node.js, which provides the easy way to build web applications with multi pages.  Express comes with 'Jade', a templating engine.
+EJS is also a popular templating engine for Node.js.</p>
+
+<h3><a name="L1" class="anchor" href="#L1"><span class="octicon octicon-link"></span></a>How to use Express & EJS</h3>
+<p>Install the 'express' & 'ejs' node modules using the below commands.</p>
+
+<pre><code>npm install express
+npm install ejs
+</code></pre>
+
+<p>Let's how to use the express for handling the http requests.  use the require method to import the express library to the node script.  From the below code the express object 'app' 
+is passed as an argument to the 'createServer' method, after this all the incoming http get calls will be handled by the express framework.  Save the below script as 'mongocrud.js' and 
+run the script as 'node mongocrud.js'.  Access the 'localhost:3000' in the browser, Bingo !  Welcome to Technoons ! </p>
+
+<pre><code>var express = require('express'),
+http = require('http');
+var app = express();
+
+app.get('/', function(req, res) {
+res.send('Welcome to Technoons!');
 });
 
 http.createServer(app).listen(3000, function() {
