--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ EJS is also a popular templating engine for Node.js.</p>
 <h3><a name="L1" class="anchor" href="#L1"><span class="octicon octicon-link"></span></a>How to use Express & EJS</h3>
 <p>Install the 'express' & 'ejs' node modules using the below commands.</p>
 
-<pre><code>npm install express
-npm install ejs
+<pre><code><font color="red">npm install express
+npm install ejs</font>
 </code></pre>
 
 <p>Let's how to use the express for handling the http requests.  use the require method to import the express library to the node script.  From the below code the express object 'app' 
